# Ageis

./: .gitignore  CLAUDE.md  Dockerfile  PHASE1_EXPLAINED.md  PROGRESS.md  PROGRESS2.md  README.md  ageis-agent.spec  architecture_map.md  daily_retrospective.md  debug_society.py  docker-compose.yml  learning_guide.md  phase6_7_plan.md  presentation.md  progress3.md  progress4.md  progress5.md  progress6.md  progress7.md  progress8.md  project_landscape.md  pyproject.toml  roadmap.md
Agent_Workspace/: persona.yaml
Agent_Workspace/plugins/: my_tool.py
desktop/: index.html
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  sidecar.json
desktop/src-tauri/src/: lib.rs  main.rs
proto/: agent.proto
python_agent/: actor.py  cli.py  config.py  core_logic.py  event_monitor.py  generate_proto.py  grpc_client.py  main.py  memory.py  persona.py  plugin_loader.py  pyproject.toml  react_loop.py  registry.py  router.py  scheduler.py  web_ui.py
python_agent/agents/: __init__.py  manager.py  researcher.py  writer.py
python_agent/tools/: __init__.py  file_reader.py  stt_tool.py  tts_tool.py  vision_tool.py  web_scraper.py  web_search.py
rust_core/: Cargo.toml  build.rs
rust_core/src/: main.rs  sandbox.rs  server.rs
src/ageis/: __init__.py
