[project]
name = "ageis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "karl3408", email = "kimdonghwandeveloper@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
ageis = "ageis:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
