[project]
name = "ageis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "karl3408", email = "kimdonghwandeveloper@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.0",
    "fastapi>=0.129.0",
    "faster-whisper>=1.2.1",
    "lxml>=6.0.2",
    "ollama>=0.6.1",
    "pyinstaller>=6.19.0",
    "python-multipart>=0.0.22",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
    "websockets>=16.0",
]

[project.scripts]
ageis = "ageis:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
